Fix bug in about image styling on mobile.
For whatever reason, the height was not maintaining the aspect ratio, since it's a square image, can set the height and width based off of the view port width.

--- a/src/App.scss
+++ b/src/App.scss
@@ -66,8 +66,8 @@
       @media screen and (max-width: 992px) {
         img {
           margin: 32px 0 0 0;
-          width: 100%;
-          height: auto;
+          width: 80vw;
+          height: 80vw;
         }
       }
     }
